# MissionControlSuite

./: CMakeLists.txt  CMakePresets.json  DevLog.md  README.md
assets/maps/: starting.json
docs/: Architecture.md  DesignDecisions.md  Requirements.md
src/: main.cpp
src/terrain/: Base.h  Map.cpp  Map.h  NoFlyZone.h  Obstacle.h
